--- a/translator-f/index.html
+++ b/translator-f/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./logo2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Translator</title>
+    <title>PolyglotPro-Translator</title>
   </head>
   <body>
     <div id="root"></div>
